--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "backpack-react-scripts": "7.0.3"
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.4",
+    "@babel/runtime": "^7.7.4",
+    "babel-eslint": "^10.0.3",
+    "backpack-react-scripts": "7.0.3",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,12 +26,31 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "jest": {
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!**/node_modules/**"
+    ]
+  },
   "devDependencies": {
     "bpk-component-button": "^3.1.9",
     "bpk-component-code": "^2.0.18",
+    "bpk-component-icon": "^5.0.19",
+    "bpk-component-image": "^3.0.18",
+    "bpk-component-input": "^5.0.19",
+    "bpk-component-label": "^4.0.18",
     "bpk-component-text": "^2.0.18",
     "bpk-mixins": "^19.0.18",
     "bpk-stylesheets": "^4.0.18",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.17.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   }
